--- a/src/main/resources/templates/admin/admin-panel.html
+++ b/src/main/resources/templates/admin/admin-panel.html
@@ -573,7 +573,7 @@
 
     async function loadCurrentUser() {
         try {
-            const response = await fetch('/api/current-user');
+            const response = await fetch('/admin/current-user');
             if (response.ok) {
                 const user = await response.json();
                 const roles = user.roles.map(role => role.name.replace('ROLE_', '')).join(' ');
@@ -587,7 +587,7 @@
 
     async function loadUserProfile() {
         try {
-            const response = await fetch('/api/current-user');
+            const response = await fetch('/admin/current-user');
             if (response.ok) {
                 const user = await response.json();
                 renderUserProfile(user);
@@ -623,7 +623,7 @@
     async function loadAllUsers() {
         showLoading(true);
         try {
-            const response = await fetch('/api/users');
+            const response = await fetch('/admin/users');
             if (response.ok) {
                 const users = await response.json();
                 renderUsersTable(users);
@@ -638,7 +638,7 @@
     async function loadAllRoles() {
         console.log('Loading roles from API...');
         try {
-            const response = await fetch('/api/roles');
+            const response = await fetch('/admin/roles');
             if (response.ok) {
                 allRoles = await response.json();
                 console.log('Roles loaded:', allRoles);
@@ -790,7 +790,7 @@
         }
 
         try {
-            const response = await fetch('/api/users', {
+            const response = await fetch('/admin/users', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -814,7 +814,7 @@
 
     async function openEditUserForm(userId) {
         try {
-            const response = await fetch(`/api/users/${userId}`);
+            const response = await fetch(`/admin/users/${userId}`);
             if (response.ok) {
                 const user = await response.json();
                 currentEditingUserId = user.id;
@@ -863,7 +863,7 @@
 
         try {
             userData.id = currentEditingUserId;
-            const response = await fetch(`/api/users/${currentEditingUserId}`, {
+            const response = await fetch(`/admin/users/${currentEditingUserId}`, {
                 method: 'PUT',
                 headers: {
                     'Content-Type': 'application/json'
@@ -911,7 +911,7 @@
 
     async function deleteUser(userId) {
         try {
-            const response = await fetch(`/api/users/${userId}`, {
+            const response = await fetch(`/admin/users/${userId}`, {
                 method: 'DELETE'
             });
 
